Fix: align to the left news footer

--- a/styles.css
+++ b/styles.css
@@ -851,6 +851,7 @@
   .footer_icon_wrapper h1 {
     margin-top: 87px;
     margin-bottom: 29px;
+    text-align: left;
   }
   
   .footer_icon_bottom {
@@ -1199,7 +1200,6 @@
       gap: 48px;
       padding: 29px;
       display: flex;
-      align-items: center;
     }
   
     .news-title {
@@ -1219,7 +1219,7 @@
       font-weight: 700;
       font-size: 32px;
       line-height: 40px;
-      text-align: center;
+      text-align: left;
     }
   
     .footer_icon_wrapper svg {
